--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@ body{
   font-family: Arial, Helvetica, sans-serif;
   color: white;
   text-align: center;
+  background-image: linear-gradient(to bottom, #00bcf57a, #0073b5be);
+  height: 100vh;
 }
 
 h1{
